[package]
name = "glass-rs"
version = "0.0.0"
edition = "2021"
description = "Graph Library for Approximate Similarity Search (Rust adaption)"
license = "MIT"
repository = "https://github.com/AsherJingkongChen/glass-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
